--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
@@ -78,7 +78,7 @@
         {% endif %}
     </div>
 </div>
-<div class="col-xs-12">
+<div class="col-xs-12" v-if="isParcelOrOfficeAvailable">
     <div class="row">
         <div class="col-xs-12">
             <input type="checkbox" name="togglePickup" :checked="value.showPickupStation" @change="togglePickupStation($event.target.checked)" :id="'showPickup' + _uid">
@@ -92,8 +92,8 @@
         <div class="col-xs-12 col-sm-8">
             <div class="input-unit" data-validate="" data-model="address1">
                 <select  :value="value.address1" class="custom-select" @change="emitInputEvent('address1', $event.target.value)">
-                    <option value="PACKSTATION" :selected="isPickupStation">{{ trans("Ceres::Template.addressPackingStation") }}</option>
-                    <option value="POSTFILIALE" :selected="isPostOffice">{{ trans("Ceres::Template.addressPostOffice") }}</option>
+                    <option v-if="isParcelBoxAvailable" value="PACKSTATION" :selected="isPickupStation">{{ trans("Ceres::Template.addressPackingStation") }}</option>
+                    <option v-if="isPostOfficeAvailable" value="POSTFILIALE" :selected="isPostOffice">{{ trans("Ceres::Template.addressPostOffice") }}</option>
                 </select>
                 <label>{{ trans("Ceres::Template.addressPickupLocation") }}</label>
             </div>
