Display rendered shop builder content directly

--- a/resources/views/Category/Content/CategoryContent.twig
+++ b/resources/views/Category/Content/CategoryContent.twig
@@ -16,7 +16,7 @@
         <div class="container-max">
             <div class="row">
                 <div class="col">
-                    {% include shopBuilderTemplate %}
+                    {{ shopBuilderTemplate | raw }}
                 </div>
             </div>
         </div>
