--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -213,75 +213,78 @@
     }
 
     (function($) {
-        function calculateBodyOffset()
-        {
-            var header = document.getElementById('page-header');
-            if ( header.classList.contains('pos-f-t') )
-            {
-                var bodyOffset = 0;
-                var children = header.children;
-                for( var i = 0; i < children.length; i++ )
-                {
-                    bodyOffset += children[i].getBoundingClientRect().height;
-                }
-                document.getElementById('vue-app').style.marginTop = bodyOffset + 'px';
-            }
-        }
-        calculateBodyOffset();
-
-
+        var header = document.getElementById('page-header');
         var unfixedElements = [];
-        function getUnfixedElements()
+
+        if ( !!header )
         {
-            unfixedElements = [];
-            $('#page-header .unfixed').each(function(i, elem)
+            function calculateBodyOffset()
             {
-                var rect = elem.getBoundingClientRect();
-                unfixedElements.push({
-                    element: elem,
-                    top: rect.top,
-                    height: rect.height
+                if ( header.classList.contains('pos-f-t') )
+                {
+                    var bodyOffset = 0;
+                    var children = header.children;
+                    for( var i = 0; i < children.length; i++ )
+                    {
+                        bodyOffset += children[i].getBoundingClientRect().height;
+                    }
+                    document.getElementById('vue-app').style.marginTop = bodyOffset + 'px';
+                }
+            }
+
+            function getUnfixedElements()
+            {
+                unfixedElements = [];
+                $('#page-header .unfixed').each(function(i, elem)
+                {
+                    var rect = elem.getBoundingClientRect();
+                    unfixedElements.push({
+                        element: elem,
+                        top: rect.top,
+                        height: rect.height
+                    });
                 });
-            });
-            scrollUnfixedElements();
-        }
+                scrollUnfixedElements();
+            }
 
-        getUnfixedElements();
-
-        function scrollUnfixedElements()
-        {
-            var scrollTop = window.scrollY;
-            unfixedElements.forEach(function(unfixed)
+            function scrollUnfixedElements()
             {
-                var spacingTop = unfixed.height - scrollTop;
-                if ( !!unfixed.element.previousElementSibling )
+                var scrollTop = window.scrollY;
+                unfixedElements.forEach(function(unfixed)
                 {
-                    unfixed.element.previousElementSibling.style.marginBottom = (spacingTop >= 0 ? spacingTop : 0) + 'px'
-                }
-                else
-                {
-                    unfixed.element.parentElement.style.paddingTop = (spacingTop >= 0 ? spacingTop : 0) + 'px';
-                }
-                unfixed.element.style.position = 'absolute';
-                unfixed.element.style.top = unfixed.top - scrollTop + 'px';
-            });
-        }
+                    var spacingTop = unfixed.height - scrollTop;
+                    if ( !!unfixed.element.previousElementSibling )
+                    {
+                        unfixed.element.previousElementSibling.style.marginBottom = (spacingTop >= 0 ? spacingTop : 0) + 'px'
+                    }
+                    else
+                    {
+                        unfixed.element.parentElement.style.paddingTop = (spacingTop >= 0 ? spacingTop : 0) + 'px';
+                    }
+                    unfixed.element.style.position = 'absolute';
+                    unfixed.element.style.top = unfixed.top - scrollTop + 'px';
+                });
+            }
 
-        $(window).scroll(scrollUnfixedElements);
-
-        $(document).on('shopbuilder.after.ready', function()
-        {
-            unfixedElements.forEach(function(unfixed)
-            {
-                $(unfixed.element).attr('css', '');
-            });
-            scrollUnfixedElements = function() {};
-        });
-
-        $(document).on('shopbuilder.before.viewUpdate shopbuilder.after.viewUpdate', function()
-        {
             calculateBodyOffset();
-        });
+            getUnfixedElements();
+
+            $(window).scroll(scrollUnfixedElements);
+
+            $(document).on('shopbuilder.after.ready', function()
+            {
+                unfixedElements.forEach(function(unfixed)
+                {
+                    $(unfixed.element).attr('css', '');
+                });
+                scrollUnfixedElements = function() {};
+            });
+
+            $(document).on('shopbuilder.before.viewUpdate shopbuilder.after.viewUpdate', function()
+            {
+                calculateBodyOffset();
+            });
+        }
 
         $(document).on('shopbuilder.after.drop shopbuilder.after.widget_replace', function(event, eventData, widgetElement)
         {
