--- a/resources/views/Containers/ItemLists/ItemList1.twig
+++ b/resources/views/Containers/ItemLists/ItemList1.twig
@@ -3,13 +3,12 @@
 
 {% set listType = config("Ceres.item.lists.1.list_type") %}
 {% set tagIds = config("Ceres.item.lists.1.tag_ids") | split(",") %}
+{% set tagSorting = config("Ceres.item.lists.tag_sorting") %}
 {% set itemListId = 1 %}
 {% set isHome = services.template.isHome() %}
 
 {% if listType == "cross_selling" %}
     {% set itemList = item.CrossSellingItems.documents %}
-{% elseif listType == "tag_list" %}
-    {% set itemList = services.itemLoader.loadForTemplate('Ceres::ItemList.ItemListView', itemLoaderPresets.tagList, {'tagIds': tagIds}).documents %}
 {% endif %}
 
 {% if listType == "last_seen" %}
