CHANGE _grid-widget.scss - add selector for nested list widgets in footer area, to add a grey background

--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -77,3 +77,34 @@
         @include widget-bg-pseudo($brand-inverse);
     }
 }
+
+
+// a list widget in the footer needs the grey background for store feature colors
+.footer {
+    .widget-grid {
+        .widget-inner {
+            .widget-list {
+                position: relative;
+                color: $footer-features-color;
+                background-color: $footer-features-bg;
+                margin-left: -15px;
+                margin-right: -15px;
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+
+            &:first-child {
+                .widget-list {
+                    margin-left: 0;
+                    padding-left: 0;
+                }
+            }
+            &:last-child {
+                .widget-list {
+                    margin-right: 0;
+                    padding-right: 0;
+                }
+            }
+        }
+    }
+}
