CHANGE grid widgets - remove appearance setting

--- a/resources/views/Widgets/Grid/ThreeColumnWidget.twig
+++ b/resources/views/Widgets/Grid/ThreeColumnWidget.twig
@@ -12,7 +12,7 @@
 {% endif %}
 
 
-<div class="widget widget-grid {{ gridClass }} widget-{{ widget.settings.appearance.mobile | default('none') }}">
+<div class="widget widget-grid {{ gridClass }}">
     {% if layout == "oneStackedToTwo" %}
 
         <div class="widget-inner widget-inner-stacked">
