--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -312,7 +312,7 @@ html {
 html {
   font-size: 14px;
   -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
@@ -5601,7 +5601,7 @@ button.close {
   margin: 1px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   border: 1px solid #fff;
   border-radius: 10px;
 }
@@ -12711,7 +12711,7 @@ button:focus {
 }
 
 .btn-labeled.btn-link .btn-label {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   padding: 0.25rem 0;
 }
 
@@ -17051,7 +17051,7 @@ body.menu-is-visible {
   bottom: -2px;
   left: -1px;
   background-color: #fff;
-  box-shadow: 0 0 0 0 transparent;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   border: 1px solid transparent;
   transform-origin: top right;
   transform: scaleX(1) scaleY(1);
@@ -19845,7 +19845,7 @@ body.menu-is-visible {
 .gradient-hr {
   border: 0;
   height: 1px;
-  background-image: linear-gradient(to right, transparent, #DCDBD7, transparent);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), #DCDBD7, rgba(0, 0, 0, 0));
 }
 
 .show-more-returns {
@@ -20076,109 +20076,24 @@ body.menu-is-visible {
       flex: 2;
 }
 
-.widget-grid.widget-primary {
+.footer .widget-grid .widget-inner .widget-list {
   position: relative;
-  color: #fff;
+  color: #4D4F4D;
+  background-color: #dadae3;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-.widget-grid.widget-primary:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #008ebd;
+.footer .widget-grid .widget-inner:first-child .widget-list {
+  margin-left: 0;
+  padding-left: 0;
 }
 
-.widget-grid.widget-secondary {
-  position: relative;
-  color: #fff;
-}
-
-.widget-grid.widget-secondary:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #d4021d;
-}
-
-.widget-grid.widget-success {
-  position: relative;
-  color: #fff;
-}
-
-.widget-grid.widget-success:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #7ED321;
-}
-
-.widget-grid.widget-info {
-  position: relative;
-  color: #fff;
-}
-
-.widget-grid.widget-info:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #5bc0de;
-}
-
-.widget-grid.widget-warning {
-  position: relative;
-  color: #fff;
-}
-
-.widget-grid.widget-warning:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #f0ad4e;
-}
-
-.widget-grid.widget-danger {
-  position: relative;
-  color: #fff;
-}
-
-.widget-grid.widget-danger:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #d9534f;
-}
-
-.widget-grid.widget-inverse {
-  position: relative;
-  color: #fff;
-}
-
-.widget-grid.widget-inverse:before {
-  content: '';
-  position: absolute;
-  height: 100%;
-  width: calc(100% - 30px);
-  top: 0;
-  left: 15px;
-  background-color: #4D4F4D;
+.footer .widget-grid .widget-inner:last-child .widget-list {
+  margin-right: 0;
+  padding-right: 0;
 }
 
 .widget-image-box > img {
