--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -18909,50 +18909,39 @@ nav.navbar.megamenu {
             -ms-flex: 2;
                 flex: 2;
     }
-
-    &.widget-primary
-    {
-        @include widget-bg-pseudo($brand-primary)
-    }
-
-    &.widget-secondary
-    {
-        @include widget-bg-pseudo($brand-secondary)
-    }
-
-    &.widget-success
-    {
-        @include widget-bg-pseudo($brand-success);
-    }
-
-    &.widget-info
-    {
-        @include widget-bg-pseudo($brand-info);
-    }
-
-    &.widget-warning
-    {
-        @include widget-bg-pseudo($brand-warning);
-    }
-
-    &.widget-danger
-    {
-        @include widget-bg-pseudo($brand-danger);
-    }
-
-    &.widget-inverse
-    {
-        @include widget-bg-pseudo($brand-inverse);
-    }
 }
 
-@at-root .footer {
+
+// a list widget in the footer needs the grey background for store feature colors
+.footer {
     .widget-grid {
         .widget-inner {
-            border: 10px solid red !important;
+            .widget-list {
+                position: relative;
+                color: $footer-features-color;
+                background-color: $footer-features-bg;
+                margin-left: -15px;
+                margin-right: -15px;
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+
+            &:first-child {
+                .widget-list {
+                    margin-left: 0;
+                    padding-left: 0;
+                }
+            }
+            &:last-child {
+                .widget-list {
+                    margin-right: 0;
+                    padding-right: 0;
+                }
+            }
         }
     }
 }
+
 .widget-image-box
 {
     > img
