--- a/resources/views/Basket/Components/BasketListItem.twig
+++ b/resources/views/Basket/Components/BasketListItem.twig
@@ -21,16 +21,26 @@
                             <a :href="basketItem.variation.data | itemURL" class="item-name">
                                 ${ basketItem.variation.data | itemName }
                             </a>
-    
+
                             <div class="item-base-price">
-                                ${ basketItem.variation.data.prices.default.unitPrice.value | currency }
+                                {% if basketItem.price == basketItem.variation.data.prices.specialOffer.unitPrice.value %}
+                                    ${ basketItem.price | currency }
+                                {% else %}
+                                    ${ basketItem.variation.data.prices.default.unitPrice.value | currency }
+                                {% endif %}
                             </div>
 
-                            <item-bundle :bundle-type="basketItem.variation.data.variation.bundleType" 
+                            <item-bundle :bundle-type="basketItem.variation.data.variation.bundleType"
                                          :bundle-components="basketItem.variation.data.bundleComponents"></item-bundle>
-    
+
                             <div class="item-small-prices text-muted" v-if="!(basketItem.variation.data.unit.unitOfMeasurement === 'C62' && basketItem.variation.data.unit.content === 1) && basketItem.variation.data.variation.mayShowUnitPrice">
-                                <div>${ basketItem.variation.data.prices.default.basePrice }</div>
+                                <div>
+                                    {% if basketItem.price == basketItem.variation.data.prices.specialOffer.unitPrice.value %}
+                                        ${ basketItem.variation.data.prices.specialOffer.basePrice }
+                                    {% else %}
+                                        ${ basketItem.variation.data.prices.default.basePrice }
+                                    {% endif %}
+                                </div>
                                 <div>
                                     <strong>{{ trans("Ceres::Template.basketContent") }}: </strong>
                                     ${ basketItem.variation.data.unit.content } ${ basketItem.variation.data.unit.names.name }
