--- a/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
+++ b/resources/views/PageDesign/Partials/Header/DefaultHeader.twig
@@ -1,4 +1,4 @@
-<header class="top-bar">
+<header id="page-header" class="top-bar pos-f-t">
     <div>
         <div class="container-max">
             <div class="row">
