CHANGE _header.scss - add position fixed to .top-bar if the class .pos-f-t is active on the same element

--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -17,6 +17,11 @@
 		color: $top-bar-color;
 		outline: none;
 	}
+
+	&.pos-f-t {
+		position: fixed;
+	}
+
 	.controls-list{
 		margin-bottom: 0;
 		font-size: 0;
